// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableOfContents should render active state 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  width: 216px;
  min-width: 216px;
  height: 100%;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  padding: 10px 16px;
  width: 100%;
  -webkit-transition: 150ms all;
  transition: 150ms all;
  text-align: left;
  overflow-wrap: break-word;
  border: 2px solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: flex-start;
  gap: 2px;
  position: relative;
}

<nav
  class="c0"
  data-id="TOC"
  data-test-id="TOC"
>
  <ul
    class="c1"
    data-id="TOC_TOC_LIST"
    data-test-id="TOC_TOC_LIST"
  >
    <li
      class="c2"
      data-id="undefined_ITEM"
      data-test-id="undefined_ITEM"
    >
      <button
        class="c3"
      >
        An item
      </button>
    </li>
  </ul>
</nav>
`;

exports[`TableOfContents should render inactive state 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  width: 216px;
  min-width: 216px;
  height: 100%;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: auto;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
  padding: 10px 16px;
  width: 100%;
  -webkit-transition: 150ms all;
  transition: 150ms all;
  text-align: left;
  overflow-wrap: break-word;
  border: 2px solid transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  justify-items: flex-start;
  gap: 2px;
  position: relative;
}

.c3::before {
  display: block;
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  width: 0;
  height: calc(100% + 4px);
  border-left: inherit;
}

<nav
  class="c0"
  data-id="TOC"
  data-test-id="TOC"
>
  <ul
    class="c1"
    data-id="TOC_TOC_LIST"
    data-test-id="TOC_TOC_LIST"
  >
    <li
      class="c2"
      data-id="undefined_ITEM"
      data-test-id="undefined_ITEM"
    >
      <button
        class="c3"
      >
        An item
      </button>
    </li>
  </ul>
</nav>
`;
